# image-compression-using-kmeans

./: .gitignore  README.md  app.py  pyproject.toml
